
syntax = "proto2";

package com.pbsaas.connect.proto;

message LoginReq {
	
	required string account = 1;
	
	required string password = 2;
	
}